[package]
name = "interstellar-tx"
version = "0.1.0"
edition = "2021"

[lib]
[dependencies]
tokio = {version = "1.20.1", features = ["full"]}
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
chrono = { version = "0.4.23", features = [ "serde" ] }
chrono-tz = "0.8"
reqwest = { version = "0.11.11", features = ["rustls-tls", "json", "blocking"], default-features = false }
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
async-trait = "0.1.68"
actix-web = { version = "4.1.0", optional = true} # very big dep

[features]
default = ["all"]
all = ["actix"]
actix = ["dep:actix-web"]